--- a/08 Jumbotron.html
+++ b/08 Jumbotron.html
@@ -22,8 +22,14 @@
             <h1>Heading</h1>
             <p>sub-title</p>
         </div>
-        <p>Page Content starts from here</p>
+        <p>Page Content starts from here...</p>
+        <hr>
+        
+        <div class="page-header">
+                <h1>Heading</h1>
+        </div>
+        <p>Page Content starts from here...</p>
     </div>
-    
+
 </body>
 </html>
