--- a/11 Buttons.html
+++ b/11 Buttons.html
@@ -18,6 +18,14 @@
 </head>
 <body>
     <br>
-    <div class="container"></div>
+    <div class="container">
+        <button type="button" class="btn btn-default">Default</button>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <button type="button" class="btn btn-warning">Warning</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-link">Link</button>
+    </div>
 </body>
 </html>
