--- a/11 Buttons.html
+++ b/11 Buttons.html
@@ -26,6 +26,12 @@
         <button type="button" class="btn btn-warning">Warning</button>
         <button type="button" class="btn btn-danger">Danger</button>
         <button type="button" class="btn btn-link">Link</button>
+        <hr>
+        <a href="#" class="btn btn-info" role="button">Link Button</a>
+        <input type="button" class="btn btn-primary" value="Input Button">
+        <input type="submit" class="btn btn-warning" value="Submit Button">
+        <hr>
+        
     </div>
 </body>
 </html>
