--- a/11 Buttons.html
+++ b/11 Buttons.html
@@ -31,6 +31,28 @@
         <input type="button" class="btn btn-primary" value="Input Button">
         <input type="submit" class="btn btn-warning" value="Submit Button">
         <hr>
+
+        <!-- Button Sizes -->
+        <button type="button" class="btn btn-primary btn-lg">Large</button>
+        <button type="button" class="btn btn-primary btn-md">Medium</button>
+        <button type="button" class="btn btn-primary btn-sm">Small</button>
+        <button type="button" class="btn btn-primary btn-xs">XSmall</button>
+        <hr>
+
+        <!-- Block Level Button -->
+        <button type="button" class="btn btn-info btn-block">Block Button 1</button>
+        <button type="button" class="btn btn-danger btn-block">Block Button 2</button>
+
+        <button type="button" class="btn btn-info btn-lg btn-block">Large Block Button 1</button>
+        <button type="button" class="btn btn-danger btn-lg btn-block">Large Block Button 2</button>
+
+        <button type="button" class="btn btn-info btn-sm btn-block">Small Block Button 1</button>
+        <button type="button" class="btn btn-info btn-sm btn-block">Small Block Button 1</button>
+        <hr>
+
+        <!-- Active/Disable Button -->
+        <button type="button" class="btn btn-primary active">Active Primary</button>
+        <button type="button" class="btn btn-primary disabled">Disabled Primary</button>
         
     </div>
 </body>
